# WhisperLiveKitV2

./: .envexample  README.md  gunicorn_gpu_cuda_0.service  pyproject.toml
docs/: API.md
scripts/: backend_t.py  base_test.py  mic_t.py  source_decoded_t.py  source_t.py
src/backend/: run.py
src/backend/application/: errors.py
src/backend/application/interfaces/: audio_storage.py
src/backend/domain/: errors.py
src/backend/entrypoint/: config.py  setup.py
src/backend/entrypoint/ioc/: adapters.py  interactors.py  registry.py
src/backend/infrastructure/adapters/: local_audio_storage.py
src/backend/presentation/: error_handler.py  root_router.py
src/backend/presentation/dto/: health_check_dto.py  transcribe_dto.py
src/backend/presentation/endpoints/: transcribe.py
src/backend/presentation/middlewares/: x_backend.py
whisperlivekit/: __init__.py  audio_processor.py  core.py  ffmpeg_manager.py  parse_args.py  remove_silences.py  results_formater.py  silero_vad_iterator.py  timed_objects.py  transcription_engine.py
whisperlivekit/simul_whisper/: backend.py
whisperlivekit/simul_whisper/whisper/: __init__.py
whisperlivekit/translation/: translation.py
whisperlivekit/web/: live_transcription.css  live_transcription.html  live_transcription.js  stream_transcription.css  stream_transcription.html  stream_transcription.js  url_transcription.html  url_transcription.js  web_interface.py
whisperlivekit/whisper_streaming_custom/: backends.py  online_asr.py  whisper_online.py
whisperlivekit/whisper_streaming_custom/constants/: bad_words.py  skip_words.py
