[project]
name = "asr-segrenev"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "gunicorn",
    "dotenv",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "dishka>=1.6.0",
    "uvicorn-worker",
    "python-multipart",
    "logging",
    "onnxruntime-gpu>=1.22.0",
    "concurrent-log-handler",
    "diart",
    "faster-whisper",
    "fastapi",
    "websockets",
    "tqdm",
    "librosa",
    "soundfile",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.1.1,<9",
  "pytest-asyncio>=0.25.3",
]

[tool.uv.sources]
torch = { index = "pytorch-all"}
torchaudio = { index = "pytorch-all"}


[[tool.uv.index]]
name = "pytorch-all"
url = "https://download.pytorch.org/whl/cu124/"
explicit = true
